--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam beatae facilis quasi sint ab, tempora blanditiis odio esse architecto autem libero dolor laboriosam iusto incidunt asperiores dolore itaque obcaecati id!</p>
 </body>
 </html>
