Navigation menu added

--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
 </head>
 <body>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam beatae facilis quasi sint ab, tempora blanditiis odio esse architecto autem libero dolor laboriosam iusto incidunt asperiores dolore itaque obcaecati id!</p>
+    <nav>
+        <ul>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+        </ul>
+    </nav>
 </body>
 </html>
